Remove extra code, increase main-wrapper width to fix mobile Firefox glitch on small viewports

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root {
@@ -99,28 +100,19 @@ body {
   background-color: var(--clr-bg-light);
   font-size: var(--fs-base);
   margin: 0;
+  max-width: 100vw;
+  width: 100%;
   display: grid;
   place-items: center;
-  grid-template-rows: 2.5rem 1fr 2.5rem;
+  grid-template-rows: 1fr;
   overflow-x: hidden;
   overflow-y: auto;
   transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
 
-header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: var(--width-90-pc);
-}
-
 button {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
-}
-
-.settings-div {
-  background: purple;
 }
 
 .loader {
@@ -199,6 +191,7 @@ button {
 }
 
 .main-wrapper {
+  margin-top: 2rem;
   width: clamp(320px, 55rem, 1200px);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -615,34 +608,9 @@ body.dark * {
   }
 }
 
-@media (min-width: 519px) and (max-width: 700px) {
-  .main-wrapper {
-    width: 80%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 3rem 10rem 14rem 20rem 20rem;
-    grid-template-areas:
-      "search"
-      "main"
-      "secondary"
-      "hourly"
-      "daily";
-    gap: var(--spc-2);
-  }
-  
-  .main-weather-img {
-    width: 50%;
-    object-fit: contain;
-  }
-
-  .row {
-    justify-content: space-evenly;
-  }
-
-}
-
 @media (max-width: 518px) {
   .main-wrapper {
-    width: 85%;
+    width: 90%;
     grid-template-columns: 1fr;
     grid-template-rows: 3rem 10rem 14rem 20rem 20rem;
     grid-template-areas:
@@ -665,6 +633,30 @@ body.dark * {
 
   .row {
     gap: var(--spc-4);
+  }
+}
+
+@media (min-width: 519px) and (max-width: 700px) {
+  .main-wrapper {
+    width: 80%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3rem 10rem 14rem 20rem 20rem;
+    grid-template-areas:
+      "search"
+      "main"
+      "secondary"
+      "hourly"
+      "daily";
+    gap: var(--spc-2);
+  }
+  
+  .main-weather-img {
+    width: 50%;
+    object-fit: contain;
+  }
+
+  .row {
+    justify-content: space-evenly;
   }
 }
 
